--- a/index.html
+++ b/index.html
@@ -188,21 +188,21 @@
                 of op een dansvloer de tegels licht laten geven.</p>
             </div>
         </div>
-    </section>
+    </section><br>
 
     <section class="Fase3">
         <div id="fase3">`
             <div class="container">
-            <h2>Fase 3</h2>
+            <h2>Fase 3</h2><br>
             <p>
                 In deze fase heb ik mijn onderzoek getoetst in de praktijk door het process volledig te doorlopen. Ik wilde 
-                een video maken waarin volumetric video het best tot zijn recht kwam, dus heb ik eerst een <a href="#">interview</a> gehouden
-                met Lisa Guerts (producer 4DR Studios) en Natasja Paulssen (Creative director, Founder). Hieruit is gekomen dat ik in de scene een video moet 
+                een video maken waarin volumetric video het best tot zijn recht kwam, dus heb ik eerst een <a href="./interviewNatasja.html">interview</a> gehouden
+                met Natasja Paulssen (Creative director, Founder). Hieruit is gekomen dat ik in de scene een video moet 
                 maken waarin ik een actualiteit pak en daar een video met een soort gelijke gebeurtenis uit het verleden gebruik als omgeving. Hiervoor 
                 moest ik gebruik maken van motion tracking, om deze techniek te leren heb ik een <a href="#">test filmpje</a> gemaakt 
                 Ik wilde precies weten wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="#">requirements lijst</a> opgesteld. Daarna heb ik 
                 <a href="#">papieren schetsen</a> gemaakt, ook heb ik een <a href="#">script</a> geschreven. Op basis van deze schetsen ben ik gaan werken aan een <a href="#">3D storyboard</a> in FrameForge.
-                Daarna heb ik een alembic gebruikt/gemaakt even kijken wat mogelijk is.... en deze in blender in een video geplaatst geplaatst. Uit het interview met 
+                Daarna heb ik een alembic gebruikt van Siert de Vos (Sportverslaggever) en deze in blender in een video geplaatst geplaatst. Uit het interview met 
                 Natasja is gebleken dat je met regen imperfecties in het 3D model goed kunt verbergen dus deze heb ik er ook nog aan toegevoegd.
                 <br><br>
                 <b>Conclusie:</b> Ik heb het hele process doorlopen om aan te tonen dat deze strategie goed werkt, en dat is zo gebleken.
@@ -211,8 +211,20 @@
                 voor de scene. Blender werkte ook naar behoren de camera trails werkte vrijwel direct nadat ik hiermee had gewerkt in mijn eerdere
                 Proof of Concepts. 
             </p><br>
-            <h2>Advies</h2>
-            <p></p>
+            <h2>Advies</h2><br>
+            <p><b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en televise?</b> <br>allereerst 
+                antwoord op de vraag: Kan volumetric video gebruikt worden in de scope film en televisie? is ja, volumetric video kan bij een 
+                bepaalde doelgroep zeker ingezet in plaats van CGI, echter zou deze technologie in een marvel blockbuster niet goed genoeg zijn. 
+                <br><br><b>Aanbevelingen:</b> voor de preproductie zal ik zowel Dutch Rose Media als Studio100 aanraden om deze stap heel 
+                serieus te nemen, want als je achteraf een fout tegen komt dan kost het veel tijd en geld om een nieuwe opname te maken. 
+                Voor de methodiek van de preproductie adviseer ik om te beginnen met een low fidelity versie op papier en daarna gebruik te 
+                maken van het programma FrameForge voor een 3D storyboard, en adviseer ik Dutch Rose Media om het bestand te gebruiken waarin ik de studio op 
+                schaal heb gemaakt. Voor de post Productie zal ik Studio100 sterk aanraden om over te stappen naar Blender, omdat Blender veel beter in de scope
+                film en televsie past vanwege, de betere belichting, de render engine en dat je kunt kijken naar de bewegingen van de volumetric in de viewport.
+                Vooralsnog zal ik adviseren om close ups van personen minimaal te houden in verband met de kwaliteit van de volumetric, mocht dit niet te voorkomen 
+                zijn dan zal ik adviseren om een fly by te maken die maximaal het gezicht 1 seconden volledig in beeld heeft. Daarnaast zou ik adviseren om zoveel mogelijk 
+                gebruik te maken van dingen als rook of donkere belichte scenes om imperfecties te verbergen.
+            </p>
         </div>
     </div>
     </section>
@@ -234,10 +246,10 @@
                  <a href="#">Interview Natasja</a>
                 <p><b>Advies</b></p><br>
                  <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
-                 <a href="./conclusiePostproductie.html"><p>conclusie beste software post productie...</p></a><br>
+                 <a href="./conclusiePostproductie.html"><p>conclusie post productie</p></a><br>
                 <p><b>Design</b></p><br>
-                 <a href="#">Requirements lijst</a>
-                 <a href="#">Script</a>
+                 <a href="#">Requirements lijst</a><br>
+                 <a href="#">Script</a><br><br>
                 <p><b>Realisatie</b></p><br>
                  <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
