--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                 een video maken waarin volumetric video het best tot zijn recht kwam, dus heb ik eerst een <a href="./interviewNatasja.html">interview</a> gehouden
                 met Natasja Paulssen (Creative director, Founder). Hieruit is gekomen dat ik in de scene een video moet 
                 maken waarin ik een actualiteit pak, daar een video op kies met een soort gelijke gebeurtenis uit het verleden en deze gebruik als achtergrond. Hiervoor 
-                moest ik gebruik maken van motion tracking, om deze techniek te leren heb ik een <a href="#">test filmpje</a> gemaakt.
-                Ik wilde precies weten wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="#">requirements lijst</a> opgesteld. Daarna heb ik 
+                moest ik gebruik maken van motion tracking, om deze techniek te leren heb ik een <a href="./motiontracking.html">test filmpje</a> gemaakt.
+                Ik wilde precies weten wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="./requirements.html">requirements lijst</a> opgesteld. Daarna heb ik 
                 <a href="#">papieren schetsen</a> gemaakt, ook heb ik een <a href="#">script</a> geschreven. Op basis van deze schetsen ben ik gaan werken aan een <a href="#">3D storyboard</a> in FrameForge.
                 Daarna heb ik een volumetric video gebruikt van Siert de Vos (Sportverslaggever) en deze in blender in een video geplaatst. Uit het interview met 
                 Natasja is gebleken dat je met regen imperfecties in het 3D model goed kunt verbergen, dus heb ik deze er ook nog aan toegevoegd.
