--- a/index.html
+++ b/index.html
@@ -201,22 +201,24 @@
                 maken waarin ik een actualiteit pak, daar een video op kies met een soort gelijke gebeurtenis uit het verleden en deze gebruik als achtergrond. Hiervoor 
                 moest ik gebruik maken van motion tracking, om deze techniek te leren heb ik een <a href="./motiontracking.html">test filmpje</a> gemaakt.
                 Ik wilde precies weten wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="./requirements.html">requirements lijst</a> opgesteld. Daarna heb ik 
-                <a href="./schetsenweervideo.html">papieren schetsen</a> gemaakt. Op basis van deze schetsen ben ik gaan werken aan een <a href="#">3D storyboard</a> in FrameForge.
+                <a href="./schetsenweervideo.html">papieren schetsen</a> gemaakt. Op basis van deze schetsen ben ik gaan werken aan een <a href="./3Dstoryboard.html">3D storyboard</a> in FrameForge.
                 Daarna heb ik een volumetric video gebruikt van Siert de Vos (Sportverslaggever) en deze in blender in een video geplaatst. Uit het interview met 
                 Natasja is gebleken dat je met regen imperfecties in het 3D model goed kunt verbergen, dus heb ik deze er ook nog aan toegevoegd.
                 <br><br>
                 <b>Conclusie:</b> Ik heb het hele proces doorlopen om aan te tonen dat deze strategie goed werkt, en dat is zo gebleken.
-                Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen en een script. Vanuit daar kon ik zo
-                verder werken, ook vond ik dat FrameForge echt een meerwaarde was, omdat ik zo gedetaileerd kon laten zien wat ik in gedachte had 
-                voor de scene. Blender werkte ook naar behoren, de motion tracking werkte vrijwel direct nadat ik hiermee had gewerkt in mijn eerdere
-                Proof of Concepts. 
+                Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen. Vanuit daar kon ik zo
+                verder werken met frameforge, ik merkte dat ik de scene snel na had gemaakt, echter heb ik ondervonden dat specifiek bij motion tracking videos het overbodig is om heel gedetaileerd een 
+                3D storyboard te maken, dit omdat de achtergrond en camera beweging al vast stonden. De motion tracking in Blender werkt soms wat minder 
+                goed als je kiest voor een video van slechte kwaliteit uit 1953.
             </p><br>
             <h2>Advies</h2><br>
             <p><b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en televisie?</b> <br>allereerst 
                 antwoord op de vraag: Kan volumetric video gebruikt worden in de scope film en televisie? is ja, volumetric video kan bij een 
                 bepaalde doelgroep zeker ingezet worden in plaats van CGI, echter zou deze technologie in een marvel blockbuster niet goed genoeg zijn. 
                 <br><br><b>Aanbevelingen:</b> voor de preproductie zal ik zowel Dutch Rose Media als Studio100 aanraden om deze stap heel 
-                serieus te nemen, want als je achteraf een fout tegen komt kost het veel tijd en geld om een nieuwe opname te maken. 
+                serieus te nemen, want als je achteraf een fout tegen komt kost het veel tijd en geld om een nieuwe opname te maken. Echter 
+                merkte ik dat bij een motion tracking filmpje waarbij de achtergrond en camera bewegingen al vast stonden, was het overbodig
+                om een storyboard te maken van de volledige scene en omgeving, in dit geval zou ik adviseren om alleen voor de acteur in de studio een storyboard te maken.
                 Voor de methodiek van de preproductie adviseer ik om te beginnen met een low fidelity versie op papier en daarna gebruik te 
                 maken van het programma FrameForge voor een 3D storyboard, en adviseer ik Dutch Rose Media om het bestand te gebruiken waarin ik de studio op 
                 schaal heb gemaakt. Voor de post Productie zal ik Studio100 sterk aanraden om over te stappen naar Blender, omdat Blender veel beter in de scope
