--- a/index.html
+++ b/index.html
@@ -244,20 +244,19 @@
                  <a href="./interviewGuy.html"><p>interview met Guy Meel over Gamekeepers scene</p></a>
                  <a href="./interviewGertJan.html"><p>interview met Gert Jan Booy over storyboarding</p></a>
                  <a href="./blenderOnderzoek.html">Blender onderzoek</a>
-                 <a href="#">Interview Lisa</a>
-                 <a href="#">Interview Natasja</a>
+                 <a href="./interviewNatasja.html">Interview Natasja</a>
                 <p><b>Advies</b></p><br>
                  <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
                  <a href="./conclusiePostproductie.html"><p>conclusie post productie</p></a><br>
                 <p><b>Design</b></p><br>
-                 <a href="#">Requirements lijst</a><br>
-                 <a href="#">Script</a><br><br>
+                 <a href="./requirements.html">Requirements lijst</a><br>
+                 <a href="./schetsenweervideo.html">papieren schetsen</a><br>
                 <p><b>Realisatie</b></p><br>
                  <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
                  <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
                  <a href="./blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a>
-                 <a href="#"><p>Blender Motion tracking</p></a><br>
+                 <a href="./motiontracking.html "><p>Blender Motion tracking</p></a><br>
                 
                 <p><b>Management & controle</b></p><br>
                  <a href="./projectplan.html">projectplan</a>
