--- a/index.html
+++ b/index.html
@@ -209,15 +209,15 @@
                 Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen. Vanuit daar kon ik zo
                 verder werken met frameforge, ik merkte dat ik de scene snel na had gemaakt, echter heb ik ondervonden dat specifiek bij motion tracking videos het overbodig is om heel gedetaileerd een 
                 3D storyboard te maken, dit omdat de achtergrond en camera beweging al vast stonden. De motion tracking in Blender werkt soms wat minder 
-                goed als je kiest voor een video van slechte kwaliteit uit 1953.
+                goed als je een video van slechte kwaliteit uit 1953 gebruikt waar ook het beeld erg schokkerig is.
             </p><br>
             <h2>Advies</h2><br>
             <p><b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en televisie?</b> <br>allereerst 
                 antwoord op de vraag: Kan volumetric video gebruikt worden in de scope film en televisie? is ja, volumetric video kan bij een 
                 bepaalde doelgroep zeker ingezet worden in plaats van CGI, echter zou deze technologie in een marvel blockbuster niet goed genoeg zijn. 
-                <br><br><b>Aanbevelingen:</b> voor de preproductie zal ik zowel Dutch Rose Media als Studio100 aanraden om deze stap heel 
+                <br><br><b>Aanbevelingen:</b>Voor het gedeelte van de hoofdvraag hoe kan volumetric het best ingezet worden? Voor de preproductie zal ik zowel Dutch Rose Media als Studio100 aanraden om deze stap heel 
                 serieus te nemen, want als je achteraf een fout tegen komt kost het veel tijd en geld om een nieuwe opname te maken. Echter 
-                merkte ik dat bij een motion tracking filmpje waarbij de achtergrond en camera bewegingen al vast stonden, was het overbodig
+                merkte ik dat bij een motion tracking filmpje waarbij de achtergrond en camera bewegingen al vast stonden, het overbodig was
                 om een storyboard te maken van de volledige scene en omgeving, in dit geval zou ik adviseren om alleen voor de acteur in de studio een storyboard te maken.
                 Voor de methodiek van de preproductie adviseer ik om te beginnen met een low fidelity versie op papier en daarna gebruik te 
                 maken van het programma FrameForge voor een 3D storyboard, en adviseer ik Dutch Rose Media om het bestand te gebruiken waarin ik de studio op 
@@ -225,7 +225,8 @@
                 film en televsie past vanwege, de betere belichting, de render engine en dat je kunt kijken naar de bewegingen van de volumetric in de viewport.
                 Vooralsnog zal ik adviseren om close ups van personen minimaal te houden in verband met de kwaliteit van de volumetric, mocht dit niet te voorkomen 
                 zijn dan zal ik adviseren om een fly by te maken die maximaal het gezicht 1 seconden volledig in beeld heeft. Daarnaast zou ik adviseren om zoveel mogelijk 
-                gebruik te maken van dingen als rook of donkere belichte scenes om imperfecties te verbergen.
+                gebruik te maken van dingen als rook of donkere belichte scenes om imperfecties te verbergen, echter moet het camerabeeld dat gebruikt word 
+                als achtergrond stabiel en scherp zijn voor het beste resultaat.
             </p>
         </div>
     </div>
