--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                 moest ik gebruik maken van motion tracking, om deze techniek te leren heb ik een <a href="./motiontracking.html">test filmpje</a> gemaakt.
                 Ik wilde precies weten wat er voor mijn filmpje aan voorbereiding moest gebeuren, dus heb ik een <a href="./requirements.html">requirements lijst</a> opgesteld. Daarna heb ik 
                 <a href="./schetsenweervideo.html">papieren schetsen</a> gemaakt. Op basis van deze schetsen ben ik gaan werken aan een <a href="./3Dstoryboard.html">3D storyboard</a> in FrameForge.
-                Daarna heb ik een volumetric video gebruikt van Siert de Vos (Sportverslaggever) en deze in blender in een video geplaatst. Uit het interview met 
-                Natasja is gebleken dat je met regen imperfecties in het 3D model goed kunt verbergen, dus heb ik deze er ook nog aan toegevoegd.
+                Daarna heb ik een volumetric video gebruikt van Siert de Vos (Sportverslaggever) en deze in blender in een <a href="./watersnoodrampmotiontracking.html">video geplaatst</a>. Deze heb 
+                ik zwart wit gemaakt om beter bij de scene te laten passen, ook heb ik met de 'texture noise' hem meer op de personen om hem heen laten lijken.
                 <br><br>
                 <b>Conclusie:</b> Ik heb het hele proces doorlopen om aan te tonen dat deze strategie goed werkt, en dat is zo gebleken.
                 Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen. Vanuit daar kon ik zo
@@ -216,12 +216,11 @@
                 antwoord op de vraag: Kan volumetric video gebruikt worden in de scope film en televisie? is ja, volumetric video kan bij een 
                 bepaalde doelgroep zeker ingezet worden in plaats van CGI, echter zou deze technologie in een marvel blockbuster niet goed genoeg zijn. 
                 <br><br><b>Aanbevelingen:</b>Voor het gedeelte van de hoofdvraag hoe kan volumetric het best ingezet worden? Voor de preproductie zal ik zowel Dutch Rose Media als Studio100 aanraden om deze stap heel 
-                serieus te nemen, want als je achteraf een fout tegen komt kost het veel tijd en geld om een nieuwe opname te maken. Echter 
-                merkte ik dat bij een motion tracking filmpje waarbij de achtergrond en camera bewegingen al vast stonden, het overbodig was
-                om een storyboard te maken van de volledige scene en omgeving, in dit geval zou ik adviseren om alleen voor de acteur in de studio een storyboard te maken.
+                serieus te nemen, want als je achteraf een fout tegen komt kost het veel tijd en geld om een nieuwe opname te maken. 
                 Voor de methodiek van de preproductie adviseer ik om te beginnen met een low fidelity versie op papier en daarna gebruik te 
                 maken van het programma FrameForge voor een 3D storyboard, en adviseer ik Dutch Rose Media om het bestand te gebruiken waarin ik de studio op 
-                schaal heb gemaakt. Voor de post Productie zal ik Studio100 sterk aanraden om over te stappen naar Blender, omdat Blender veel beter in de scope
+                schaal heb gemaakt. Echter merkte ik dat bij een motion tracking filmpje waarbij de achtergrond en camera bewegingen al vast stonden, het overbodig was
+                om een storyboard te maken van de volledige scene en omgeving, in dit geval zou ik adviseren om alleen voor de acteur in de studio een storyboard te maken. Voor de post Productie zal ik Studio100 sterk aanraden om over te stappen naar Blender, omdat Blender veel beter in de scope
                 film en televsie past vanwege, de betere belichting, de render engine en dat je kunt kijken naar de bewegingen van de volumetric in de viewport.
                 Vooralsnog zal ik adviseren om close ups van personen minimaal te houden in verband met de kwaliteit van de volumetric, mocht dit niet te voorkomen 
                 zijn dan zal ik adviseren om een fly by te maken die maximaal het gezicht 1 seconden volledig in beeld heeft. Daarnaast zou ik adviseren om zoveel mogelijk 
@@ -245,25 +244,31 @@
                  <a href="./interviewGuy.html"><p>interview met Guy Meel over Gamekeepers scene</p></a>
                  <a href="./interviewGertJan.html"><p>interview met Gert Jan Booy over storyboarding</p></a>
                  <a href="./blenderOnderzoek.html">Blender onderzoek</a>
-                 <a href="./interviewNatasja.html">Interview Natasja</a>
+                 <a href="./interviewNatasja.html">Interview Natasja</a><br><br>
                 <p><b>Advies</b></p><br>
                  <a href="./conclusieStoryboarding.html"><p>conclusie storyboarding</p></a>
                  <a href="./conclusiePostproductie.html"><p>conclusie post productie</p></a><br>
                 <p><b>Design</b></p><br>
                  <a href="./requirements.html">Requirements lijst</a><br>
                  <a href="./schetsenweervideo.html">papieren schetsen</a><br>
+                 <a href="./matrixTest.html">test storyboard</a> <br>
+                 <a href="./3Dstoryboard.html">3D storyboard Motion tracking video</a><br><br>
+
                 <p><b>Realisatie</b></p><br>
                  <a href="./unityBospad.html"><p>unity Bospad omgeving</p></a>
                  <a href="./ironManScene.html"><p>unity flying animation</p></a>
                  <a href="./blenderKubus.html"><p>Blender kubus camera animatie</p></a>
                  <a href="./blenderanimatie.html"><p>Blender Volumetric dans camera animatie</p></a>
-                 <a href="./motiontracking.html "><p>Blender Motion tracking</p></a><br>
+                 <a href="./motiontracking.html "><p>Blender Motion tracking</p></a>
+                 <a href="./watersnoodrampmotiontracking.html"><p>Blender watersnoodramp video</p></a>
+                 <br>
                 
                 <p><b>Management & controle</b></p><br>
-                 <a href="./projectplan.html">projectplan</a>
+                 <a href="./projectplan.html">projectplan</a><br>
+                 <a href="./planningVoorbeelden.html">Voorbeelden planning</a>
                 <br><br>
                 <p><b>Oordeelsvorming</b></p><br>
-                <a href="./oordeelsvorming.html">Oordeelsvorming</a>
+                <a href="./oordeelsvorming.html">Oordeelsvorming</a><br><br>
 
                 <p><b>Communicatie</b></p><br>
                 <a href="./guymail.html">Mail contact Guy Meel</a><br>
