--- a/guymail.html
+++ b/guymail.html
@@ -12,10 +12,11 @@
         <div class="navbar">
             <p id="logo">Portfolio</p>
             <div class="links">
-                <a href="index.html#productensctn">Producten</a>
-                <a href="index.html#faseEen">Fase 1</a>
-                <a href="index.html#faseTwee">Fase 2</a>
-                <a href="#">Fase 3</a>
+                <a href="./index.html#productensctn">Producten</a>
+                <a href="./index.html#faseEen">Fase 1</a>
+                <a href="./index.html#faseTwee">Fase 2</a>
+                <a href="./index.html#fase3">Fase 3</a>
+                <a href="./index.html#sectieReflectie">Reflectie</a>
             </div>
         </div>
         <div class="container">
