--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     (inspiratie van Iron Man, 2008) hierdoor heb ik geleerd om met een timeline en keyframes te werken ook heb ik geleerd hoe je de skybox aan kunt passen 
                     (lucht omgeving veranderd naar omgeving met wolken). Het exporteren van deze video bleek echter vrij ingewikkeld, omdat de timeline meer bedoelt is voor een ‘cutscene’ tussen gameplay door.<br><br>
                     
-                    <b>Conclusie sprint 1:</b><p>Op basis van mijn Proof of Concepts, een Expert interview met Swen Rooijakkers en de ondervindingen van Guy Meel ben ik tot de conclusie gekomen dat 
+                    <b>Conclusie sprint 1:</b><p>Op basis van mijn expirimenten, een expert interview met Swen Rooijakkers en de ondervindingen van Guy Meel ben ik tot de conclusie gekomen dat 
                         game engines niet geschikt zijn in de scope film en televisie. In de volgende sprint ga ik naar opties kijken buiten het gebied game engines.</p><br><br>
 
                     In sprint 2 ben ik na een <a href="./interviewSwen.html">interview</a> met Swen Rooijakkers overgestapt op Blender, omdat dit beter aansluit bij de scope film en televisie. 
@@ -171,7 +171,7 @@
                     Hiermee heb ik de basics geleerd zoals: vertices (punten in 3D objecten waar hoeken of lijnen samen komen), 
                     keybindings en geometry nodes.<br><br> 
                     
-                    Om meer te weten te komen over camera animaties in Blender heb ik een <a href="./blenderKubus.html">POC</a> gemaakt met een camera track.
+                    Om meer te weten te komen over camera animaties in Blender heb ik een <a href="./blenderKubus.html">expiriment</a> gedaan met een camera track.
                     Ik heb hierbij een beweging gemaakt die normaliter niet makkelijk te filmen is. Ik heb de camera recht door het object laten vliegen.
                     <a href="./blenderanimatie.html">De volgende iteratie</a> wilde ik in plaats van een statisch object gebruik maken van een volumetric video. 
                     Ik heb hier geleerd om de camera op verschillende punten in de animatie te laten focussen, door een empty object in de scene toe 
@@ -209,7 +209,9 @@
                 Wat ik wel fijn vond en wat mij was aangeraden bij Dutch Rose Media was om te beginnen met papieren schetsen. Vanuit daar kon ik zo
                 verder werken met frameforge, ik merkte dat ik de scene snel na had gemaakt, echter heb ik ondervonden dat specifiek bij motion tracking videos het overbodig is om heel gedetaileerd een 
                 3D storyboard te maken, dit omdat de achtergrond en camera beweging al vast stonden. De motion tracking in Blender werkt soms wat minder 
-                goed als je een video van slechte kwaliteit uit 1953 gebruikt waar ook het beeld erg schokkerig is.
+                goed als je een video van slechte kwaliteit uit 1953 gebruikt waar ook het beeld erg schokkerig is. Een goede applicatie voor deze techniek
+                is bijvoorbeeld Klokhuis, dit is een kleine Nederlandse studio die educatieve programma's maakt voor kinderen bijvoorbeeld over 
+                geschiedenis.
             </p><br>
             <h2>Advies</h2><br>
             <p><b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en televisie?</b> <br>allereerst 
@@ -295,10 +297,10 @@
                         <li>Unity</li>
                         <li>3D user experience</li>
                     </ul><br>
-                    Ik heb 3D concepting heel goed onderzocht en zoals ik net aangaf hiervoor ook experts geraadpleegd en bij hun Proof of concepts 
+                    Ik heb 3D concepting heel goed onderzocht en zoals ik net aangaf hiervoor ook experts geraadpleegd en bij hun proof of concepts/expirimenten
                     gevalideerd. Ik heb Unity ook goed onderzocht en hierin een aantal producten gemaakt en deze ook weer laten 
                     valideren bij experts, echter bleek Unity alleen niet genoeg om een goed onderzoek te maken. Daarom heb ik ook nog 
-                    onderzoek gedaan naar Unreal en heb ik Blender gebruikt om Proof of Concepts te gebruiken. 3D user experience bleek 
+                    onderzoek gedaan naar Unreal en heb ik Blender gebruikt om proof of concepts te gebruiken. 3D user experience bleek 
                     niet toepaselijk te zijn in de sector film en televsie, omdat er geen interactie is met de gebruiker. Ik merkte 
                     tijdens mijn stage dat de geringe kennis die ik van te voren over het onderwerp ervoor zorgde dat ik bepaalde assumpties heb gemaakt 
                     die achteraf niet klopten, bijvoorbeeld dat Game Engines de enige optie was omtrent het maken van omgevingen voor scènes.
