--- a/requirements.html
+++ b/requirements.html
@@ -22,7 +22,8 @@
         <div class="container">
         <h2>List of Requirements</h2><br>
             <p>Om de opdracht goed in kaart te brengen heb ik een 'List of requirements' gemaakt, hierin heb ik geschreven 
-                over wat het filmpje inhoud en welke technieken er nodig waren om dit te maken.
+                over wat het filmpje inhoud en welke technieken er nodig waren om dit te maken. Ik heb het eerste filmpje uitgekozen 
+                voor de mooie camera draai, echter werkte dit niet met motion tracking daarom heb ik de nieuwe video ernaast gezet.
             </p><br>
     
             <iframe src="./files/Weer.pdf" width="90%" height="900px" frameborder="0"></iframe>
