--- a/watersnoodrampmotiontracking.html
+++ b/watersnoodrampmotiontracking.html
@@ -25,11 +25,18 @@
                 gekregen om een actueel iemand in een belangrijke gebeurtenis in de geschiedenis te plaatsen. Ik heb hiervoor 
                 een volumetric video van Siert de Vos gebruikt en deze via motion tracking in de omgeving geplaatst. Motion tracking 
                 werkt door punten in de video aan te duiden die de gehele video zichtbaar zijn dan volgt blender dit punt en kan de camera 
-                bewegingen berekenen en omzetten naar de 3D omgeving van Blender. 
-                <img src="./IMG/blender motion tracking.png" alt="">
-                Deze video mag niet op youtube gedeelt worden, omdat het materiaal van Siert vertrouwelijk is.
-                Daarom heb ik de video op google drive gezet 
-                <a href="#">link</a>
+                bewegingen berekenen en omzetten naar de 3D omgeving van Blender. <br><br>
+                Zoals je kan zien komen het storyboard en het product niet overheen, dit komt doordat de originele beelden die ik wilde 
+                gebruiken niet geschikt waren voor motion tracking omdat de beelden natuurlijk heel oud zien en niet scherp. Dit was het eerste 
+                resultaat.<br>
+                <img src="./IMG/pogingmotiontracking.png" alt=""><br>
+                Zoals je kunt zien is de vloer niet op de juiste plek en heeft hij niet de juiste orientatie.<br>
+                Hierna heb ik een video met minder beweging gekozen zodat ik met de motion tracking nog wel reference point kon 
+                aanduiden. 
+                <img src="./IMG/blender motion tracking.png" alt=""><br>
+                Deze video mag niet op youtube gedeelt worden, omdat de volumetric van Siert de Vos vertrouwelijk is.
+                Daarom heb ik <a href="https://drive.google.com/file/d/1E3vzG7AurEVW4rY0M8upndFT4F2uY9ij/view?usp=sharing">de video</a> op google drive gezet 
+                
             </p><br>
         </div>
      </section>
