--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
                 3D storyboard te maken, dit omdat de achtergrond en camera beweging al vast stonden. De motion tracking in Blender werkt soms wat minder 
                 goed als je een video van slechte kwaliteit uit 1953 gebruikt waar ook het beeld erg schokkerig is. Een goede applicatie voor deze techniek
                 is bijvoorbeeld Klokhuis, dit is een kleine Nederlandse studio die educatieve programma's maakt voor kinderen bijvoorbeeld over 
-                geschiedenis.
+                geschiedenis. Daarin worden vaak gespeelde scenes met een echte set gebruikt. In de plaats hiervan zou je met volumetric video de 
+                personen echt in de beelden van vroeger kunnen plaatsen.
             </p><br>
             <h2>Advies</h2><br>
             <p><b>Hoofdvraag: Hoe kan volumetric het best ingezet worden om ingewikkelde camera shots te maken voor film en televisie?</b> <br>allereerst 
