--- a/watersnoodrampmotiontracking.html
+++ b/watersnoodrampmotiontracking.html
@@ -32,11 +32,12 @@
                 <img src="./IMG/pogingmotiontracking.png" alt=""><br>
                 Zoals je kunt zien is de vloer niet op de juiste plek en heeft hij niet de juiste orientatie.<br>
                 Hierna heb ik een video met minder beweging gekozen zodat ik met de motion tracking nog wel reference point kon 
-                aanduiden. 
+                aanduiden. Ik heb de volumetric van Siert beter in de omgeving laten intergreren door hem zwart wit te maken en 'noise texture' toe te voegen.
                 <img src="./IMG/blender motion tracking.png" alt=""><br>
                 Deze video mag niet op youtube gedeelt worden, omdat de volumetric van Siert de Vos vertrouwelijk is.
-                Daarom heb ik <a href="https://drive.google.com/file/d/1E3vzG7AurEVW4rY0M8upndFT4F2uY9ij/view?usp=sharing">de video</a> op google drive gezet 
-                
+                Daarom heb ik <a href="https://drive.google.com/file/d/1E3vzG7AurEVW4rY0M8upndFT4F2uY9ij/view?usp=sharing">de video</a> op google drive gezet<br>
+                Ik heb niet meer voor de deadline de mist en regen kunnen toevoegen, in opdracht van Dutch Rose Media zal ik hier in de komende 
+                weken nog verder aan gaan werken.              
             </p><br>
         </div>
      </section>
