--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
                     voor dit doeleinde.<br>
                     In het kort heb ik een veel onderzoekendere houding aangenomen en zelf interviews ingepland met meerdere experts en heb ik hun 
                     eisen en inzichten meegenomen in mijn conclusie. Ik heb twee van de drie eigen leerdoelen aangetoond en het leerdoel Unity zelfs nog een stuk uitgebreider 
-                    gemaakt dan initieel de bedoeling was.
+                    gemaakt dan initieel de bedoeling was. Professioneel merkte ik dat ik aan het begin soms nog terughoudend was met het vragen van 
+                    feedback buiten de standaard maandag ochtend, hierdoor had ik soms dat ik vrijdag eigenlijk al feedback had willen hebben,
+                    maar het dan over het weekend heb getilt waardoor ik wat tijd ben verloren.
                 </p>
             </div>
         </div>
