--- a/oordeelsvorming.html
+++ b/oordeelsvorming.html
@@ -27,7 +27,10 @@
                 De deelvragen: Hoe gaat Studio100 nu te werk op gebied van pre productie en post productie? en waarom is volumetric video
                 beter als CGI?, welke Game engine's zijn geschikt voor editing volumetric video? die heb ik veranderd naar welke software
             is geschikt voor post productie va volumetric video? nadat ik heb ondervonden dat voor de scope film en televisie dit niet 
-            de beste optie is.</b>
+            de beste optie is.</b> Verder had ik leerdoelen voor mezelf opgestelt, maar tijdens het lopen van mijn stage ben ik erachter 
+            gekomen dat de geringe kennis die ik over de opdracht en de technologie had ik een niet heb kunnen voltooien namelijk: 3D user 
+            experience ik gin ervan uit dat dit aanwezig zou moeten zijn, omdat ik op school alleen nog maar aan applicaties heb gewerkt. Echter 
+            bleek dit hier niet van toepassing te zijn, omdat er bij film en televisie geen interactie is. 
             </p><br>
         </div>
      </section>
