--- a/motiontracking.html
+++ b/motiontracking.html
@@ -21,7 +21,10 @@
         </div>
         <div class="container">
             <h2>Motion tracking test video</h2><br>
-            
+            <p>Ik heb een video gemaakt, om te leren hoe motion tracking werkt in Blender, ook heb ik hier gewerkt met een 
+                HDRI om een geloofwaardige belichting te maken. En een shaduw vanger gebruikt om schaduw over de omgeving te plaatsen.
+                
+            </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/n4WWtYX38_E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>          
         </div>
      </section>
